@@ -150,6 +150,8 @@ ATTR_lockfile,
 ATTR_credentiallifetime,
 ATTR_jobmustreport,
 ATTR_checkpoint_dir,
+ATTR_dispsvrsuffix,
+ATTR_jobsuffixalias, 
 ATTR_mailsubjectfmt,
 ATTR_mailbodyfmt,
 ATTR_npdefault,
