@@ -1011,6 +1011,32 @@ attribute_def svr_attr_def[] =
       PARENT_TYPE_SERVER
   },
 
+  /*SRV_ATR_display_job_server_suffix */
+  { ATTR_dispsvrsuffix, /* "display_job_server_suffix" */
+    decode_b,
+    encode_b,
+    set_b,
+    comp_b,
+    free_null,
+    NULL_FUNC,
+    MGR_ONLY_SET,
+    ATR_TYPE_LONG,
+    PARENT_TYPE_SERVER
+  },
+
+  /*SRV_ATR_job_suffix_alias */
+  { ATTR_jobsuffixalias, /* "job_suffix_alias" */
+    decode_str,
+    encode_str,
+    set_str,
+    comp_str,
+    free_str,
+    NULL_FUNC,
+    MGR_ONLY_SET,
+    ATR_TYPE_STR,
+    PARENT_TYPE_SERVER
+  },
+
   /* SRV_ATR_MailSubjectFmt */
   { ATTR_mailsubjectfmt, /* "mail_subject_fmt" */
     decode_str,
